# dbus_cvte

./: .gitignore  lv_conf.h
client/: CMakeLists.txt
client/include/: ClientApp.h  DBusClientProxy.h  ITestListener.h  ITestService.h
client/sources/: ClientApp.cpp  DBusClientProxy.cpp  lvgl_display.cpp  main.cpp
dbus_complete/: build.sh
dbus_complete/Client/: CMakeLists.txt
dbus_complete/Client/Include/: test_client.h
dbus_complete/Client/Sources/: main.c
dbus_complete/Service/: CMakeLists.txt
dbus_complete/Service/Include/: test_service.h
dbus_complete/Service/Sources/: main.c
server/: CMakeLists.txt
server/include/: DBusService.h  TestInfo.h
server/sources/: DBusService.cpp  main.cpp
